Updates to carousel timimg.

--- a/style.css
+++ b/style.css
@@ -1,47 +1,65 @@
 .row {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .images {
-    margin-top: 10px;
+  margin-top: 10px;
 }
-
 
 /* .section-border{
     border-style: solid;
 } */
 
 .blocktext270 {
-    
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 270px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 270px;
+  color: rgb(31, 17, 83)
 }
 
 .blocktext120 {
-    
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 120px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 120px;
+  color: rgb(31, 17, 83)
 }
 
 .button {
-    background-color: gray;
-    color: white
+  
+  color: rgb(31, 17, 83)
 }
 
 .carousel-caption {
-    position: absolute;
-    top: 350px
- }
+  position: absolute;
+  top: 150px;
+}
 
+.carousel-control-prev,
+.carousel-control-next {
+  height: 75px;
+  width: 75px;
+  outline: black;
+  background-size: 100%, 100%;
+ 
+ 
+  top: 250px;
+}
 
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23009be1' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+  width: 30px;
+  height: 48px;
+}
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23009be1' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+  width: 30px;
+  height: 48px;
+}
 
 body {
-    background-image: url(assets/backgrounds/white-wood-vertical-texture.png);
-    font-family:'Source+Sans+Pro', sans-serif;
-    }
-
+  background-image: url(assets/backgrounds/white-wood-vertical-texture.png);
+  font-family: "Source+Sans+Pro", sans-serif;
+}
