--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .row {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-right: 15px;
+  text-align: center;
 }
 
 .images {
@@ -32,8 +34,11 @@
 }
 
 .btn-group {
-  height: 100px;
-  top: 150px;
+  height: 175px;
+  top: 50px;
+  padding-top: 60px;
+  padding-bottom: 0px;
+  
 }
 
 
@@ -62,6 +67,12 @@
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23009be1' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   width: 30px;
   height: 48px;
+}
+
+#home-text{
+  margin-top: 210px;
+  margin-bottom: 100px;
+  text-align: center;
 }
 
 body {
